--- a/README
+++ b/README
@@ -4,4 +4,4 @@ Bewegung über Pfeiltasten
 Extras:
 s - Stop die Bewegung der Fallen für einige Sekunden
 m - Ermöglicht es dem Spieler kurze Zeit durch Wände zu laufen, verhindert aber den Raumwechsel. Friert der Spieler in einer Wand ein, stirbt er
-
+b - platziert eine Bombe
