--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Bewegung über Pfeiltasten
 
 Extras:
 s - Stop die Bewegung der Fallen für einige Sekunden
-m - Ermöglicht es dem Spieler kurze Zeit durch Wände zu laufen, verhindert aber den Raumwechsel. Friert der Spieler in einer Wand ein, stirbt er
+w - Ermöglicht es dem Spieler kurze Zeit durch Wände zu laufen, verhindert aber den Raumwechsel. Friert der Spieler in einer Wand ein, stirbt er
 b - platziert eine Bombe
 
 Karte erstellen:
